--- a/style.css
+++ b/style.css
@@ -53,6 +53,8 @@ body {
   border-radius: 999px;
   margin: 0 15px;
   cursor: pointer;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -webkit-tap-highlight-color: transparent;
 }
 
 .btn:hover {
